# serialize

./: .gitignore  LICENSE  README.md  generate_x64_vs2015.bat  generate_x86_vs2015.bat
src/: CMakeLists.txt
src/JafSerialize/: README.md  macro_serialize.h  macro_serialize_bit.h  serialize_include.h
src/JafSerialize/Buffer/: reader_buff.h  reader_buff_interface.h  write_buffer.h  write_buffer_interface.h
src/JafSerialize/Endian/: endian_base.h  endian_big.h  endian_interface.h  endian_little.h  manage_endian.h
src/JafSerialize/SerializeItem/: serialize_array.h  serialize_float.h  serialize_integer.h  serialize_piece.h  serialize_user_define.h  serialize_vector.h
src/JafSerialize/SerializeItem/SddBit/: SddBitItem.h  SddBoolBit.h  serialize_bit_interface.h
src/JafSerialize/SerializeObj/: serialize_base.h  serialize_bit_base.h  serialize_interface.h
src/TestJafSerialize/: CMakeLists.txt  main.cpp  test_seri_array.cpp  test_seri_float.cpp  test_seri_many.cpp  test_seri_other.cpp  test_seri_temple.cpp  test_seri_vector.cpp
src/TestJafSerialize/TestSeriBit/: test_seri_bit.cpp  test_seri_bit.h  test_seri_bit_1.cpp  test_seri_bit_2.cpp  test_seri_bit_3.cpp  test_seri_bit_4.cpp  test_seri_bit_5.cpp  test_seri_bit_6.cpp  test_seri_bit_all_spread.cpp
src/TestJafSerialize/TestSeriMacro/: test_spread_seri_macro.cpp  test_spread_seri_macro_1.cpp  test_spread_seri_macro_2.cpp  test_spread_seri_macro_3.cpp  test_spread_seri_macro_4.cpp  test_spread_seri_macro_5.cpp  test_spread_seri_macro_all_spread.cpp  test_spread_seri_macro_head.h
